Jupyter-Notebook hübsch gemacht

--- a/assignments_1/idl_s01_adri_philipp.ipynb
+++ b/assignments_1/idl_s01_adri_philipp.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "19873479",
+   "metadata": {},
+   "source": [
+    "# Assignment 1\n",
+    "## Collaborative Work from Adrian Bremer & Philipp Reinig"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2977a0c8",
+   "id": "666b9c1d",
    "metadata": {},
    "outputs": [
     {
@@ -24,9 +33,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee83ea60",
+   "metadata": {},
+   "source": [
+    "# MNIST-Tutorial "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "236dc284",
+   "id": "92d426bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +55,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d125145f",
+   "id": "8e1c15f6",
    "metadata": {},
    "source": [
-    "# Viewing the first date"
+    "## Viewing the first date"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "84de9cd2",
+   "id": "4c081785",
    "metadata": {},
    "outputs": [
     {
@@ -74,16 +91,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58770e58",
+   "id": "7c09f892",
    "metadata": {},
    "source": [
-    "# Setting up and training the model"
+    "## Setting up and training the model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d6f17f1",
+   "id": "4a9e91e5",
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +130,7 @@
     "W = tf.Variable(np.zeros([784, 10]).astype(np.float32))\n",
     "b = tf.Variable(np.zeros(10, dtype=np.float32))\n",
     "\n",
+    "\n",
     "for step in range(train_steps):\n",
     "    img_batch, lbl_batch = data.next_batch()\n",
     "    with tf.GradientTape() as tape:\n",
@@ -135,16 +153,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20d5353",
+   "id": "7870c317",
    "metadata": {},
    "source": [
-    "# Testing"
+    "## Testing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b2b436ca",
+   "id": "67ecd970",
    "metadata": {},
    "outputs": [
     {
@@ -164,9 +182,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe1dbb79",
+   "metadata": {},
+   "source": [
+    "# Building a Deep Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df77843d",
+   "id": "407a2c98",
    "metadata": {},
    "outputs": [],
    "source": []
