Softmax anstatt relu im hidden layer genutzt...

--- a/assignments_1/idl_s01_adri_philipp.ipynb
+++ b/assignments_1/idl_s01_adri_philipp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19873479",
+   "id": "5d2cd3d1",
    "metadata": {},
    "source": [
     "# Assignment 1\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "666b9c1d",
+   "id": "d64a833d",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee83ea60",
+   "id": "782f8198",
    "metadata": {},
    "source": [
     "# MNIST-Tutorial "
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92d426bc",
+   "id": "1d324503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e1c15f6",
+   "id": "d09a250e",
    "metadata": {},
    "source": [
     "## Viewing the first date"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4c081785",
+   "id": "5cdfeeb4",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c09f892",
+   "id": "7628368b",
    "metadata": {},
    "source": [
     "## Setting up and training the model"
@@ -99,26 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "4a9e91e5",
+   "execution_count": 31,
+   "id": "db0f0efb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 2.3025851249694824 Accuracy: 0.0703125\n",
-      "Loss: 0.564154326915741 Accuracy: 0.8671875\n",
-      "Loss: 0.42171138525009155 Accuracy: 0.8984375\n",
-      "Loss: 0.3759312331676483 Accuracy: 0.8984375\n",
-      "Loss: 0.3795311748981476 Accuracy: 0.8828125\n",
+      "Loss: 2.3025851249694824 Accuracy: 0.0546875\n",
+      "Loss: 0.6403647661209106 Accuracy: 0.8515625\n",
       "Starting new epoch...\n",
-      "Loss: 0.4487443268299103 Accuracy: 0.8671875\n",
-      "Loss: 0.40551987290382385 Accuracy: 0.921875\n",
-      "Loss: 0.3301001787185669 Accuracy: 0.9375\n",
-      "Loss: 0.350700318813324 Accuracy: 0.890625\n",
+      "Loss: 0.5543510913848877 Accuracy: 0.859375\n",
+      "Loss: 0.4408627152442932 Accuracy: 0.890625\n",
+      "Loss: 0.3129492402076721 Accuracy: 0.9296875\n",
+      "Loss: 0.4372774064540863 Accuracy: 0.875\n",
+      "Loss: 0.3615952730178833 Accuracy: 0.8984375\n",
       "Starting new epoch...\n",
-      "Loss: 0.40685296058654785 Accuracy: 0.8671875\n",
+      "Loss: 0.3537825345993042 Accuracy: 0.90625\n",
+      "Loss: 0.32792341709136963 Accuracy: 0.9296875\n",
+      "Loss: 0.34434133768081665 Accuracy: 0.921875\n",
       "Done!\n"
      ]
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7870c317",
+   "id": "a393933f",
    "metadata": {},
    "source": [
     "## Testing"
@@ -161,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "67ecd970",
+   "execution_count": 32,
+   "id": "6aea185f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor(0.9097, shape=(), dtype=float32)\n"
+      "tf.Tensor(0.9118, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -183,16 +183,91 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe1dbb79",
+   "id": "8ede6067",
    "metadata": {},
    "source": [
     "# Building a Deep Model"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ba0cb7e",
+   "metadata": {},
+   "source": [
+    "## Hidden Layer\n",
+    "Using a variable size \"N\" for the hidden layer.\n",
+    "The previous layer with 10 Outputs represents the Output-Layer. \n",
+    "Therefore, the hidden weights get a shape of Nx784 and the Output-Weights will get a shape of 10xN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bd0d5264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 2.3110854625701904 Accuracy: 0.0859375\n",
+      "Starting new epoch...\n",
+      "Loss: 0.6954036355018616 Accuracy: 0.828125\n",
+      "Loss: 0.546585202217102 Accuracy: 0.875\n",
+      "Loss: 0.4353269040584564 Accuracy: 0.890625\n",
+      "Loss: 0.28331130743026733 Accuracy: 0.9140625\n",
+      "Loss: 0.39672017097473145 Accuracy: 0.890625\n",
+      "Starting new epoch...\n",
+      "Loss: 0.22528213262557983 Accuracy: 0.921875\n",
+      "Loss: 0.15443439781665802 Accuracy: 0.9453125\n",
+      "Loss: 0.2647829055786133 Accuracy: 0.9375\n",
+      "Loss: 0.37492677569389343 Accuracy: 0.8984375\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 20\n",
+    "\n",
+    "# initialising weights with small random values\n",
+    "# and biases with small positive values (alternatively with zeros)\n",
+    "W_ih = tf.Variable(np.random.uniform(low=-0.1, high=0.1, size=(784, N)).astype(np.float32))\n",
+    "b_h = tf.Variable(np.random.uniform(low=0.0, high=0.1, size=N).astype(np.float32))\n",
+    "W_ho = tf.Variable(np.random.uniform(low=-0.1, high=0.1, size=(N, 10)).astype(np.float32))\n",
+    "b_o = tf.Variable(np.random.uniform(low=0.0, high=0.1, size=10).astype(np.float32))\n",
+    "\n",
+    "for step in range(train_steps):\n",
+    "    img_batch, lbl_batch = data.next_batch()\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        tape.watch([W_ih, b_h, W_ho, b_o])\n",
+    "        \n",
+    "        hidden_logits = tf.matmul(img_batch, W_ih) + b_h\n",
+    "        # DON'T USE SOFTMAX HERE - IT IS AWFUL!\n",
+    "        hidden_softmax = tf.nn.relu(hidden_logits)\n",
+    "        \n",
+    "        logits = tf.matmul(hidden_softmax, W_ho) + b_o\n",
+    "        xent = tf.reduce_mean(tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
+    "            logits=logits, labels=lbl_batch))\n",
+    "        \n",
+    "    grads = tape.gradient(xent, [W_ih, b_h, W_ho, b_o])\n",
+    "    W_ih.assign_sub(learning_rate * grads[0])\n",
+    "    b_h.assign_sub(learning_rate * grads[1])\n",
+    "    W_ho.assign_sub(learning_rate * grads[2])\n",
+    "    b_o.assign_sub(learning_rate * grads[3])\n",
+    "    \n",
+    "    if not step % 100:\n",
+    "        preds = tf.argmax(logits, axis=1, output_type=tf.int32)\n",
+    "        acc = tf.reduce_mean(tf.cast(tf.equal(preds, lbl_batch),\n",
+    "                             tf.float32))\n",
+    "        print(\"Loss: {} Accuracy: {}\".format(xent, acc))\n",
+    "\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407a2c98",
+   "id": "c12452a6",
    "metadata": {},
    "outputs": [],
    "source": []
