--- a/assignments_2/assignment_02.ipynb
+++ b/assignments_2/assignment_02.ipynb
@@ -1705,13 +1705,14 @@
     "- w_range was to high with 0.4 so values where exploding -> w_range = 0.1 works fine\n",
     "\n",
     "**Fail 2**\n",
-    "- sigmoid is bad for this\n",
+    "- sigmoid is bad for this because of vanishing gradient\n",
     "\n",
     "**Fail 3**\n",
-    "- initialization with negative values only\n",
+    "- initialization with negative values only and relu -> no learning\n",
     "\n",
     "**Fail 4**\n",
-    "- noise is way to high (and unnecessary)\n",
+    "- noise is way to high (and unnecessary) -> negative pixel values are created\n",
+    "- and noise not for input layer but in hidden layers\n",
     "\n",
     "**Fail 5**\n",
     "- softmax makes no sense for calculating the logits -> don't use this"
