added knowledge from exercise to final model (a03)

--- a/assignments_3/a03_abremer_preinig.ipynb
+++ b/assignments_3/a03_abremer_preinig.ipynb
@@ -22,14 +22,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 11:12:50.903508: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-26 11:12:51.026434: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-10-26 11:12:51.026469: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-10-26 11:12:51.026914: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-26 11:12:51.089220: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-26 11:12:51.090359: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-11-02 12:02:47.594591: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-02 12:02:47.729269: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-02 12:02:47.729322: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-02 12:02:47.729806: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-02 12:02:47.794918: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-02 12:02:47.796489: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-26 11:12:52.038137: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-11-02 12:02:49.107092: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "a881d4d6",
    "metadata": {},
    "outputs": [],
@@ -796,9 +796,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68c9c5bb",
+   "metadata": {},
+   "source": [
+    "### Trying with knowledge from exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7231d5e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "100/100 [==============================] - 7s 58ms/step - loss: 1.8722 - accuracy: 0.3002\n",
+      "Epoch 2/10\n",
+      "100/100 [==============================] - 5s 53ms/step - loss: 1.4815 - accuracy: 0.4591\n",
+      "Epoch 3/10\n",
+      "100/100 [==============================] - 5s 53ms/step - loss: 1.3395 - accuracy: 0.5124\n",
+      "Epoch 4/10\n",
+      "100/100 [==============================] - 5s 54ms/step - loss: 1.2233 - accuracy: 0.5629\n",
+      "Epoch 5/10\n",
+      "100/100 [==============================] - 5s 53ms/step - loss: 1.0976 - accuracy: 0.6121\n",
+      "Epoch 6/10\n",
+      "100/100 [==============================] - 5s 53ms/step - loss: 1.0462 - accuracy: 0.6316\n",
+      "Epoch 7/10\n",
+      "100/100 [==============================] - 5s 55ms/step - loss: 1.0072 - accuracy: 0.6439\n",
+      "Epoch 8/10\n",
+      "100/100 [==============================] - 6s 56ms/step - loss: 0.9483 - accuracy: 0.6641\n",
+      "Epoch 9/10\n",
+      "100/100 [==============================] - 5s 54ms/step - loss: 0.8619 - accuracy: 0.6912\n",
+      "Epoch 10/10\n",
+      "100/100 [==============================] - 5s 53ms/step - loss: 0.8487 - accuracy: 0.7066\n",
+      "79/79 [==============================] - 1s 11ms/step - loss: 0.8952 - accuracy: 0.6865\n",
+      "Model: \"sequential_15\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_71 (Conv2D)          (None, 16, 16, 32)        896       \n",
+      "                                                                 \n",
+      " max_pooling2d_19 (MaxPooli  (None, 15, 15, 32)        0         \n",
+      " ng2D)                                                           \n",
+      "                                                                 \n",
+      " conv2d_72 (Conv2D)          (None, 8, 8, 128)         102528    \n",
+      "                                                                 \n",
+      " conv2d_73 (Conv2D)          (None, 8, 8, 64)          8256      \n",
+      "                                                                 \n",
+      " conv2d_74 (Conv2D)          (None, 4, 4, 128)         204928    \n",
+      "                                                                 \n",
+      " conv2d_75 (Conv2D)          (None, 2, 2, 256)         295168    \n",
+      "                                                                 \n",
+      " flatten_15 (Flatten)        (None, 1024)              0         \n",
+      "                                                                 \n",
+      " dense_24 (Dense)            (None, 64)                65600     \n",
+      "                                                                 \n",
+      " dense_25 (Dense)            (None, 10)                650       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 678026 (2.59 MB)\n",
+      "Trainable params: 678026 (2.59 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.Sequential([\n",
+    "    layers.Conv2D(filters=32, kernel_size=3, padding=\"same\", activation=\"relu\", strides=2),\n",
+    "    layers.MaxPooling2D(strides=1),\n",
+    "    layers.Conv2D(filters=128, kernel_size=5, padding=\"same\", activation=\"relu\", strides=2),\n",
+    "    layers.Conv2D(filters=64, kernel_size=1, padding=\"same\"),\n",
+    "    layers.Conv2D(filters=128, kernel_size=5, padding=\"same\", activation=\"relu\", strides=2),\n",
+    "    layers.Conv2D(filters=256, kernel_size=3, padding=\"valid\", activation=\"relu\"),\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(units=64),\n",
+    "    layers.Dense(units=10)\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(train_data, epochs=10, steps_per_epoch=100)\n",
+    "model.evaluate(test_data)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff9d2c35",
+   "metadata": {},
+   "source": [
+    "**_Conclusion_**  \n",
+    "- achieves same accuracy and less loss in orders less magnitude of time\n",
+    "- also way less parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7231d5e1",
+   "id": "ffdc1498",
    "metadata": {},
    "outputs": [],
    "source": []
