assignment 8 & notes on a07

--- a/assignments_7/a07_abremer_preinig.ipynb
+++ b/assignments_7/a07_abremer_preinig.ipynb
@@ -2581,7 +2581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tokens are used (like silibels). It's using the most common character combinations as tokens.\n",
+    "Tokens (_sub-word tokenzation_) are used (like silibels). It's using the most common character combinations as tokens.\n",
     "\n",
     "e.g. as you can see in 2. 'costume' is split up in the tokens 'co', '##st', '##ume' in potugese and in 'cost', '##um', '##e' where ## means that the word is continuing."
    ]
@@ -2666,7 +2666,12 @@
     "Transformers use the dot-Product for attention. Attention in general no matter the concrete implementation is commutative which means, that ordering is lost through this operation. The network knows that there are words with some correlation, but it doesn't know where and in which order. Therefore, you need the positional encoding to know, in which order the words occured.\n",
     "\n",
     "_Why sine waves?_\n",
-    "- We don't really know, but probably because of cosine similarity. So that nearby words get positional encodings that are cosine similar (point in roughly the same direction)."
+    "- Probably because of cosine similarity. So that nearby words get positional encodings that are cosine similar (point in roughly the same direction).\n",
+    "- Different frequencies ensure that values are different for each value\n",
+    "- **Solution from exercise**\n",
+    "    - want to differentiate nearby words in their position without getting too large values\n",
+    "    - use sine wave\n",
+    "    - use multiple sine waves of different frequencies to tell apart positions that have the same value currently"
    ]
   },
   {
@@ -2675,7 +2680,7 @@
     "id": "o36_x35B5Dq5"
    },
    "source": [
-    "### 4. Yes or No: At each position, the decoder is attending to all previous positions, i.e. all encoder positions and the previous decoder predictions."
+    "### 4. Yes or No: At each position, the decoder is attending to all previous positions, i.e. all encoder positions (_encoder output, but all time steps (tokens)_) and the previous decoder predictions."
    ]
   },
   {
@@ -2691,14 +2696,16 @@
     "id": "uCJ8Mcon5Hdt"
    },
    "source": [
-    "### 5. The decoder uses teacher forcing. Does this mean the time steps can be computed in parallel?"
+    "### 5. The decoder uses teacher forcing. Does this mean the time steps (_predicted tokens for each time step are meant_) can be computed in parallel?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes, it should be like that since the encoder outputs stay the same and the inputs to the decoder are known at each time step."
+    "Yes, it should be like that since the encoder outputs stay the same and the inputs to the decoder are known at each time step. But this is just true for training. During inference the model has to deal with it's own outputs. \n",
+    "\n",
+    "You should consider to not only use teacher forcing during training since the model then can't deal with it's own output."
    ]
   },
   {
@@ -2707,16 +2714,16 @@
     "id": "r8i1eFXo5Khs"
    },
    "source": [
-    "### 6. Can the encoder time steps be computed in parallel?"
+    "### 6. Can the encoder time steps (_tokens_) be computed in parallel (_still need to compute the single encoder layers sequentially_)?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No, but that's not a big problem because the encoder just processes the input once and the result of this is used by the decoder in each time step.\n",
+    "~No, but that's not a big problem because the encoder just processes the input once and the result of this is used by the decoder in each time step.~\n",
     "\n",
-    "If one time step is meant to be one token, than the answer is yes because the attention mechanism works in parallel. "
+    "If one time step is meant to be one token, than the answer is yes because the attention mechanism works in parallel and takes the whole sequence as input."
    ]
   },
   {
@@ -2732,7 +2739,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The sentences are padded. The mask is to mask the padding, so that the padding doesn't influence the loss."
+    "The sentences are padded. The mask is to mask the padding, so that the padding doesn't influence the loss. \n",
+    "This prevents the model to learn that predicting padding all the time gives a low loss."
    ]
   },
   {
@@ -2759,7 +2767,12 @@
     "\n",
     "The 'that' is not that important for the meaning of the sentence but the cross-entropy would consider this wrong (or at least not entirely correct).\n",
     "\n",
-    "So, this is not a really good measure for translation quality. **But** there isn't a really good measure for this because a good translation can only be measured by how well the semantics match. And measuring the semantics is not doable. Therefore, measuring the syntax needs to hold. And it kind of gives good results."
+    "So, this is not a really good measure for translation quality. **But** there isn't a really good measure for this because a good translation can only be measured by how well the semantics match. And measuring the semantics is not doable. Therefore, measuring the syntax needs to hold. And it kind of gives good results.\n",
+    "\n",
+    "**Note**\n",
+    "- in practice you use multiple or other scores\n",
+    "- e.g. _BLEU_ score -> search for sub strings -> are these same -> solves the ordering problem not that of synonyms\n",
+    "- or use top 5 accuracy"
    ]
   },
   {
@@ -2823,7 +2836,12 @@
     "id": "CEzY1nXN8nov"
    },
    "source": [
-    "You always get the same result. This is because once the translator is trained and we change nothing in inference it is a deterministic algorithm. There is no noise..."
+    "You always get the same result. This is because once the translator is trained - and we change nothing in inference - it is a deterministic algorithm. There is no noise...\n",
+    "\n",
+    "**Note**\n",
+    "- You could choose your word from the logits not based on the maximum value, but use tf.random.categorical which would sample based on the probabilities.\n",
+    "- There you would get different results each time you run it.\n",
+    "- Should consider your use case -> Are different results ok or not?"
    ]
   },
   {
@@ -2841,7 +2859,7 @@
     "id": "rYEtUngO899f"
    },
    "source": [
-    "The tokenizers and train the model again. The rest should be able to stay the same.\n",
+    "The tokenizers and train the model again (_and switch the dataset..._). The rest should be able to stay the same.\n",
     "\n",
     "If you don't have a tokenizer for your wanted language, you would have to train it on this language again."
    ]
