classifier with freezed encoder

--- a/assignments_10/idl_a10_abremer.ipynb
+++ b/assignments_10/idl_a10_abremer.ipynb
@@ -18,11 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "id": "YEY3cOC6Nh1G"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-15 11:14:07.129577: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-15 11:14:07.274298: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-12-15 11:14:07.274349: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-12-15 11:14:07.274827: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-12-15 11:14:07.338395: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-12-15 11:14:07.339596: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-12-15 11:14:08.683971: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -32,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +56,7 @@
        "(50000, 32, 32, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +1073,228 @@
    "source": [
     "diff = r_restored_test_images - restored_test_images\n",
     "np.max(diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Taking the encoder to build classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load model & get encoder\n",
+    "Sadly I forgot to save encoder and decoder seperatly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: sequential_9\n",
+      "1: sequential_10\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.load_model('conv_deconv_small.keras')\n",
+    "for i,layer in enumerate(model.layers):\n",
+    "    print(f\"{i}: {layer.name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_9\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_10 (Conv2D)          (None, 16, 16, 8)         224       \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Bat  (None, 16, 16, 8)         32        \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " conv2d_11 (Conv2D)          (None, 8, 8, 16)          1168      \n",
+      "                                                                 \n",
+      " batch_normalization_6 (Bat  (None, 8, 8, 16)          64        \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " conv2d_12 (Conv2D)          (None, 4, 4, 32)          4640      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 6128 (23.94 KB)\n",
+      "Trainable params: 6080 (23.75 KB)\n",
+      "Non-trainable params: 48 (192.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoder = model.layers[0]\n",
+    "encoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Build classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# don't train encoder\n",
+    "encoder.trainable = False\n",
+    "\n",
+    "pretrained_classifier_freeze = tf.keras.Sequential([\n",
+    "    encoder,\n",
+    "    tfkl.Flatten(),\n",
+    "    tfkl.Dense(128, activation=\"relu\"),\n",
+    "    tfkl.Dense(10)\n",
+    "])\n",
+    "\n",
+    "pretrained_classifier_freeze.compile(\n",
+    "    optimizer=tf.keras.optimizers.Adam(0.1),\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(),\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = tf.data.Dataset.from_tensor_slices((train_images, train_labels)).shuffle(50000).batch(128).repeat()\n",
+    "test_data = tf.data.Dataset.from_tensor_slices((test_images, test_labels)).batch(128).repeat(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "50/50 [==============================] - 0s 6ms/step - loss: 2.3026 - accuracy: 0.1016\n",
+      "Epoch 2/20\n",
+      "50/50 [==============================] - 0s 7ms/step - loss: 2.3026 - accuracy: 0.1003\n",
+      "Epoch 3/20\n",
+      "50/50 [==============================] - 0s 6ms/step - loss: 2.3026 - accuracy: 0.1008\n",
+      "Epoch 4/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1036\n",
+      "Epoch 5/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0975\n",
+      "Epoch 6/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0950\n",
+      "Epoch 7/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0952\n",
+      "Epoch 8/20\n",
+      "50/50 [==============================] - 0s 6ms/step - loss: 2.3026 - accuracy: 0.1050\n",
+      "Epoch 9/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1042\n",
+      "Epoch 10/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1006\n",
+      "Epoch 11/20\n",
+      "50/50 [==============================] - 0s 5ms/step - loss: 2.3026 - accuracy: 0.0986\n",
+      "Epoch 12/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0994\n",
+      "Epoch 13/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1033\n",
+      "Epoch 14/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0997\n",
+      "Epoch 15/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0972\n",
+      "Epoch 16/20\n",
+      "50/50 [==============================] - 0s 5ms/step - loss: 2.3026 - accuracy: 0.0962\n",
+      "Epoch 17/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1020\n",
+      "Epoch 18/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0952\n",
+      "Epoch 19/20\n",
+      "50/50 [==============================] - 0s 5ms/step - loss: 2.3026 - accuracy: 0.0952\n",
+      "Epoch 20/20\n",
+      "50/50 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.1047\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7fe1e90997e0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#early_stop = tf.keras.callbacks.EarlyStopping(patience=3)\n",
+    "#reduce_lr = tf.keras.callbacks.ReduceLROnPlateau()\n",
+    "\n",
+    "pretrained_classifier_freeze.fit(\n",
+    "    train_data,\n",
+    "    epochs=20,\n",
+    "    steps_per_epoch=50#,\n",
+    "    #validation_data=test_data,\n",
+    "    #callbacks=[early_stop, reduce_lr]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79/79 [==============================] - 0s 4ms/step - loss: 2.3026 - accuracy: 0.0994\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2.3025832176208496, 0.09939999878406525]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pretrained_classifier_freeze.evaluate(test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Allowing the pretrained encoder to also train"
    ]
   },
   {
